--- a/main.ipynb
+++ b/main.ipynb
@@ -988,7 +988,7 @@
     "- You can also use slicing to extract a subset of an array by specifying a range of indices using the colon `:` operator.\n",
     "- Numpy supports various types of indexing, including:\n",
     "  1. Integer indexing: Accessing elements using integer indices.\n",
-    "  2. Boolean indexing: Accessing elements using boolean arrays.\n",
+    "  2. Boolean indexing: Accessing elements using boolean arrays. Also used for **filtering** arrays based on conditions.\n",
     "  3. Fancy indexing: Accessing elements using arrays of indices.\n",
     "- Slicing can be done using the syntax `array[start:stop:step]`, where `start` is the starting index, `stop` is the ending index (exclusive), and `step` is the step size.\n",
     "- Numpy indexing and slicing are powerful tools for manipulating and analyzing data in NumPy arrays. arrays efficiently."
@@ -1453,6 +1453,312 @@
     "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
     "n_arr = np.array_split(arr, 4) # Here arr.length is not divisible by 4\n",
     "print(n_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c196f64",
+   "metadata": {},
+   "source": [
+    "### Search, Sort Search sorted, Filter in Numpy Arrays\n",
+    "- You can search for specific values in a numpy array using functions like `np.where()` and `np.searchsorted()`.\n",
+    "- You can sort a numpy array using functions like `np.sort()` and `np.argsort()`.\n",
+    "- You can filter elements in a numpy array based on specific conditions using boolean indexing or functions like `np.extract()`.\n",
+    "- `np.where()` -> Returns tuple of indices where condition is met. The tuple contains arrays for each dimension of the input array.\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "a192b617",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 1, 1, 1, 1]), array([4, 0, 1, 2, 3, 4]))\n",
+      "Indices of elements greater than 50: [0 1 1 1 1 1]\n",
+      "(array([1, 2, 4]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Searching in Numpy arrays\n",
+    "import select\n",
+    "\n",
+    "\n",
+    "arr = np.array([[10, 20, 30, 40, 50], [60, 70, 80, 90, 100]])\n",
+    "\n",
+    "result = np.where(arr > 40)\n",
+    "print(result)\n",
+    "print(\"Indices of elements greater than 50:\", result[0])\n",
+    "\n",
+    "\n",
+    "fruits = np.array(['apple', 'banana', 'cherry', 'date', 'elderberry'])\n",
+    "selected_fruits = np.where(np.char.str_len(fruits) > 5)\n",
+    "print(selected_fruits)\n",
+    "# print(\"Fruits with names longer than 5 characters:\", fruits[selected_fruits])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "05dfca50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index to insert 40 to maintain order: 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Search sorted array, performs binary search in the sorted array, and returns the index where the element should be inserted to maintain order.\n",
+    "## What is side 'left' and 'right'?\n",
+    "#   side='left': Insert the element to the left of existing elements with the same value.\n",
+    "#   side='right': Insert the element to the right of existing elements with the same value.\n",
+    "arr = np.array([10, 20, 30, 40, 50])\n",
+    "left_index = np.searchsorted(arr, 40, side='left') \n",
+    "right_index = np.searchsorted(arr, 40, side='right') \n",
+    "print(\"Index to insert 40 to maintain order:\", left_index, right_index)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "71e5cb75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [11 12 22 25 34 64 90]\n",
+      "Sorted 2D array: [[ 5 65 13  4]\n",
+      " [50 81 80 18]]\n",
+      "Sorted 2D array: [[ 4 13 50 81]\n",
+      " [ 5 18 65 80]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Sorting Numpy arrays\n",
+    "arr = np.array([64, 34, 25, 12, 22, 11, 90])\n",
+    "sorted_arr = np.sort(arr)\n",
+    "print(\"Sorted array:\", sorted_arr)\n",
+    "\n",
+    "arr1 = np.array([[50, 81, 13, 4], [5, 65, 80, 18]])\n",
+    "sorted_arr0 = np.sort(arr1, axis=0)\n",
+    "sorted_arr1 = np.sort(arr1, axis=1)\n",
+    "print(\"Sorted 2D array:\", sorted_arr0)\n",
+    "print(\"Sorted 2D array:\", sorted_arr1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "e5812c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False  True  True  True]\n",
+      "Filtered array (elements greater than 25): [30 35 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Filter Numpy arrays by applying conditions that uses/results boolean indexing\n",
+    "arr = np.array([10, 15, 20, 25, 30, 35, 40])\n",
+    "filter_condition = arr > 25\n",
+    "print(filter_condition) # This is a boolean array\n",
+    "filtered_arr = arr[filter_condition]\n",
+    "print(\"Filtered array (elements greater than 25):\", filtered_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fde08d",
+   "metadata": {},
+   "source": [
+    "### Some additional Numpy functions\n",
+    "- `np.unique()` -> Returns the sorted unique elements of an array.\n",
+    "- np.clip() -> Clips (limits) the values in an array to a specified range.\n",
+    "- np.roll() -> Rolls the elements of an array along a specified axis.\n",
+    "- np.transpose() -> Transposes the dimensions of an array.\n",
+    "- `random.shuffle()` -> Randomly shuffles the elements of an array along a specified axis.\n",
+    "- resize -> Changes the shape of an array without changing its data.\n",
+    "- flatten -> Flattens a multi-dimensional array into a 1D array.\n",
+    "- ravel -> Returns a contiguous flattened array.\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "874db840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]\n",
+      " [13 14 15]]\n",
+      "Shuffled array: [[ 7  8  9]\n",
+      " [ 4  5  6]\n",
+      " [ 1  2  3]\n",
+      " [13 14 15]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Shuffle Numpy arrays\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12], [13, 14, 15]])\n",
+    "print(\"Original array:\", arr)\n",
+    "np.random.shuffle(arr)\n",
+    "print(\"Shuffled array:\", arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9a97f6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique elements in the array: (array([[1, 2, 2],\n",
+      "       [3, 4, 4],\n",
+      "       [4, 5, 6]]), array([1, 2, 1]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Unique\n",
+    "arr = np.array([[1, 2, 2], [3, 4, 4,], [4, 5, 6], [3, 4, 4]])\n",
+    "unique_elements = np.unique(arr, axis=0, return_counts=True)\n",
+    "print(\"Unique elements in the array:\", unique_elements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cfa9390",
+   "metadata": {},
+   "source": [
+    "### What is the difference between resize and reshapre in numpy?\n",
+    "- `reshape` returns a new array with the specified shape without changing the original array. The total number of elements must remain the same.\n",
+    "- `resize` modifies the original array in place to the specified shape. If the new shape has more elements, it fills the new elements with zeros; if it has fewer elements, it truncates the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 573,
+   "id": "03a579ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "Reshaped arrays:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[1 2 3 4 5 6]\n",
+      "Another reshape example:\n",
+      "Reshaped arrays:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Reshape example\n",
+    "np_var1 = np.array([1, 2, 3, 4, 5, 6])\n",
+    "print(np_var1)\n",
+    "\n",
+    "\n",
+    "print(\"Reshaped arrays:\")\n",
+    "# Method 1\n",
+    "print(np_var1.reshape(2, 3))\n",
+    "\n",
+    "# Method 2\n",
+    "print(np.reshape(np_var1, (2, 3)))\n",
+    "\n",
+    "# Original array remains unchanged\n",
+    "print(np_var1)\n",
+    "\n",
+    "\n",
+    "print(\"Another reshape example:\")\n",
+    "\n",
+    "np_var1 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(\"Reshaped arrays:\")\n",
+    "# Method 1\n",
+    "print(np_var1.reshape(2, 3))\n",
+    "\n",
+    "# Method 2\n",
+    "print(np.reshape(np_var1, (3, 2)))\n",
+    "\n",
+    "# Original array remains unchanged\n",
+    "print(np_var1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beaeaf73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Resized array:\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "Original array after resizing [[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Resize example\n",
+    "np_var2 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(np_var2)\n",
+    "\n",
+    "print(\"Resized array:\")\n",
+    "# Method 1 -> Note: This modifies the original array. This is ndarray.resize() method.\n",
+    "# np_var2.resize((3, 2))\n",
+    "\n",
+    "\n",
+    "# Method 2 -> Note: This does not modify the original array, and returns a new array instead. This is numpy.resize() function.\n",
+    "resized = np.resize(np_var2, (3, 2))\n",
+    "print(resized)\n",
+    "\n",
+    "print(\"Original array after resizing\", np_var2)\n"
    ]
   }
  ],
