added new topics

--- a/main.ipynb
+++ b/main.ipynb
@@ -1760,6 +1760,128 @@
     "\n",
     "print(\"Original array after resizing\", np_var2)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "842cd40c",
+   "metadata": {},
+   "source": [
+    "### Insertion in Numpy arrays\n",
+    "- You can insert elements into a numpy array using the `np.insert()` function. \n",
+    "- The `np.insert()` function allows you to specify the index at which to insert the new element(s), as well as the axis along which to insert them (for multi-dimensional arrays).\n",
+    "- The original array remains unchanged, and a new array with the inserted elements is returned.\n",
+    "- np.append() -> Appends elements to the end of an array and returns a new array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87949f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[683]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m new_arr1 = np.insert(arr, \u001b[32m3\u001b[39m, \u001b[32m70\u001b[39m, axis=\u001b[32m1\u001b[39m) \u001b[38;5;66;03m# Insert along columns at index 1\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Inserting 70 at the inner dimension (columns) and then broadcasting it to match the number of rows\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[43mnew_arr1\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m(\u001b[32m100\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mArray after insertion:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m, new_arr)\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mOriginal array remains unchanged:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m, arr)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "## Inserting in Numpy arrays\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "new_arr = np.insert(arr, 2, 60, axis=0) # Insert along rows at index 0\n",
+    "# Inserting 60 at the outer dimension (rows) and then broadcasting it to match the number of columns\n",
+    "\n",
+    "new_arr1 = np.insert(arr, 3, 70, axis=1) # Insert along columns at index 1\n",
+    "# Inserting 70 at the inner dimension (columns) and then broadcasting it to match the number of rows\n",
+    "\n",
+    "\n",
+    "print(\"Array after insertion:\\n\", new_arr)\n",
+    "print(\"Original array remains unchanged:\\n\", arr)\n",
+    "\n",
+    "\n",
+    "print(\"Array after insertion:\\n\", new_arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e02fdfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array after appending an item: ['apple' 'banana' 'cherry' 'date']\n",
+      "Original array remains unchanged: ['apple' 'banana' 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Appending in Numpy arrays\n",
+    "\n",
+    "items = np.array(['apple', 'banana', 'cherry'])\n",
+    "new_items = np.append(items, 'date')\n",
+    "print(\"Array after appending an item:\", new_items)\n",
+    "print(\"Original array remains unchanged:\", items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9dcbde9",
+   "metadata": {},
+   "source": [
+    "### Delete elements from Numpy arrays\n",
+    "- You can delete elements from a numpy array using the `np.delete()` function.\n",
+    "- The `np.delete()` function allows you to specify the index or indices of the elements to be deleted, as well as the axis along which to delete them (for multi-dimensional arrays).\n",
+    "- The original array remains unchanged, and a new array with the specified elements removed is returned.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 682,
+   "id": "3137a417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array after deletion:\n",
+      " [[ 10  20  30  40]\n",
+      " [ 90 100 110 120]]\n",
+      "Original array remains unchanged:\n",
+      " [[ 10  20  30  40]\n",
+      " [ 50  60  70  80]\n",
+      " [ 90 100 110 120]]\n",
+      "Array after deletion of 3rd column:\n",
+      " [[ 10  20  40]\n",
+      " [ 50  60  80]\n",
+      " [ 90 100 120]]\n",
+      "Original array remains unchanged:\n",
+      " [[ 10  20  30  40]\n",
+      " [ 50  60  70  80]\n",
+      " [ 90 100 110 120]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Deletion in Numpy arrays\n",
+    "arr = np.array([[10, 20, 30, 40], [50, 60, 70, 80], [90, 100, 110, 120]])\n",
+    "new_arr = np.delete(arr, 1, axis=0) # Delete 2nd\n",
+    "print(\"Array after deletion:\\n\", new_arr)\n",
+    "print(\"Original array remains unchanged:\\n\", arr)\n",
+    "\n",
+    "new_arr1 = np.delete(arr, 2, axis=1) # Delete 3rd column\n",
+    "print(\"Array after deletion of 3rd column:\\n\", new_arr1)\n",
+    "print(\"Original array remains unchanged:\\n\", arr)"
+   ]
   }
  ],
  "metadata": {
