added matrix learning

--- a/main.ipynb
+++ b/main.ipynb
@@ -1882,6 +1882,93 @@
     "print(\"Array after deletion of 3rd column:\\n\", new_arr1)\n",
     "print(\"Original array remains unchanged:\\n\", arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35db0e9",
+   "metadata": {},
+   "source": [
+    "## Matrix in Numpy\n",
+    "- A matrix in NumPy is a specialized 2D array that is used for mathematical operations involving linear algebra.\n",
+    "- You can create a matrix using the `np.matrix()` function or by creating a 2D NumPy array using `np.array()`.\n",
+    "- Matrices support various operations such as addition, subtraction, multiplication, and transposition.\n",
+    "\n",
+    "## Difference between Numpy array and Matrix\n",
+    "- Numpy arrays are more general-purpose and can have any number of dimensions, while matrices are specifically 2D.\n",
+    "- Numpy arrays support element-wise operations by default, while matrices use matrix multiplication rules.\n",
+    "- Matrices have additional methods for linear algebra operations, such as `I` for inverse and `H` for conjugate transpose."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 687,
+   "id": "529b104e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix 1:\n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "Type  of matrix 1 <class 'numpy.matrix'>\n",
+      "Matrix 2:\n",
+      " [[9 8 7]\n",
+      " [6 5 4]\n",
+      " [3 2 1]]\n",
+      "Type  of matrix 2 <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Matrix in Numpy\n",
+    "\n",
+    "matrix_1 = np.matrix([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print(\"Matrix 1:\\n\", matrix_1)\n",
+    "print(\"Type  of matrix 1\", type(matrix_1))\n",
+    "\n",
+    "matrix_2  = np.array([[9, 8, 7], [6, 5, 4], [3, 2, 1]])\n",
+    "print(\"Matrix 2:\\n\", matrix_2)\n",
+    "print(\"Type  of matrix 2\", type(matrix_2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 689,
+   "id": "bc3e9c83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix Multiplication Result:\n",
+      " [[19 22]\n",
+      " [43 50]]\n",
+      "Element-wise Multiplication Result:\n",
+      " [[ 5 12]\n",
+      " [21 32]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [[1, 2], [3, 4]]\n",
+    "l2 = [[5, 6], [7, 8]]\n",
+    "\n",
+    "A = np.matrix(l1)\n",
+    "B = np.matrix(l2)\n",
+    "C = A * B  # Matrix multiplication\n",
+    "print(\"Matrix Multiplication Result:\\n\", C)\n",
+    "\n",
+    "\n",
+    "\n",
+    "a = np.array(l1)\n",
+    "b = np.array(l2)\n",
+    "c = a * b  # Element-wise multiplication\n",
+    "print(\"Element-wise Multiplication Result:\\n\", c)\n"
+   ]
   }
  ],
  "metadata": {
