--- a/main.ipynb
+++ b/main.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a4736ad7",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2425dd1f",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "65c7a6d3",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dae65292",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "951279de",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a0e361d9",
    "metadata": {},
    "outputs": [
@@ -216,8 +216,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "540 ns ± 1.46 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "263 ns ± 0.971 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "637 ns ± 26.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "279 ns ± 14.2 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "114fd0f0",
    "metadata": {},
    "outputs": [
@@ -250,6 +250,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65757ba9",
+   "metadata": {},
+   "source": [
+    "### NumPy Array vs Python List: A Deep Dive\n",
+    "While both look like sequences of data, they function very differently under the hood.\n",
+    "\n",
+    "**Python Lists:**\n",
+    "- **Dynamic & Heterogeneous**: Can hold different types (int, float, string) mixed together.\n",
+    "- **Pointer-Based**: A Python list is actually an array of pointers (memory addresses). Each pointer points to a full Python object stored elsewhere in memory.\n",
+    "- **Memory Overhead**: Each simple integer in Python is an object with overhead (reference count, type info, value).\n",
+    "\n",
+    "**NumPy Arrays:**\n",
+    "- **Fixed Type & Homogeneous**: All elements must be of the same type (e.g., all `int32`).\n",
+    "- **Contiguous Memory**: Elements are stored side-by-side in a single continuous block of RAM. The array object itself just points to the start of this block and knows the data type and shape.\n",
+    "\n",
+    "![SIMD Comparison](simd_comparison.png)\n",
+    "\n",
+    "### Why is Contiguous Memory Faster?\n",
+    "1.  **Locality of Reference**: When the CPU fetches data from RAM, it fetches a \"cache line\" (e.g., 64 bytes). Because NumPy data is contiguous, a single fetch brings in multiple useful elements. With Python lists, the next element might be far away in memory, causing a \"Cache Miss\" and forcing the CPU to wait.\n",
+    "2.  **No Type Checking**: Since NumPy knows all elements are `int32`, it doesn't need to check the type of every single element during an operation. Python must check the type of every object in the list.\n",
+    "\n",
+    "### SIMD (Single Instruction, Multiple Data)\n",
+    "Modern CPUs have special \"Vector Units\" that can perform math on multiple numbers at once.\n",
+    "- **SISD (Scalar)**: Standard Python adds numbers one by one: `a[0]+b[0]`, then `a[1]+b[1]`.\n",
+    "- **SIMD (Vector)**: NumPy passes the contiguous block of data to the CPU. The CPU can load, say, 4 or 8 integers into a vector register and add them all effectively in a single clock cycle.\n",
+    "\n",
+    "This hardware-level parallelism is why NumPy is orders of magnitude faster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "15dfdbaf",
    "metadata": {},
    "source": [
@@ -260,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5ef92ee7",
    "metadata": {},
    "outputs": [
@@ -304,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9beb12db",
    "metadata": {},
    "outputs": [
@@ -344,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "355ac05e",
    "metadata": {},
    "outputs": [
@@ -366,6 +397,27 @@
     "## Creating a ones array\n",
     "onesarr = np.ones(shape=(2, 3, 4), dtype=int)\n",
     "print(onesarr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "10d4f74e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[None None]\n",
+      " [None None]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a full array\n",
+    "fullarr = np.full((2, 2), None) \n",
+    "print(fullarr)"
    ]
   },
   {
@@ -472,10 +524,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.75619435 0.12989232 0.23281539 0.24297322]\n",
+      "[0.46614636 0.19501061 0.58327447 0.8768851 ]\n",
       "=============\n",
-      "[[0.12418332 0.20745428 0.3119288  0.19553912 0.66863757]\n",
-      " [0.53583568 0.70428571 0.39634357 0.25423956 0.63436481]]\n"
+      "[[0.58727511 0.74076836 0.69606138 0.15228189 0.78071103]\n",
+      " [0.54723338 0.2956857  0.23314014 0.75842684 0.11218124]]\n"
      ]
     }
    ],
@@ -501,8 +553,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.35377329  2.14554602  1.80742085]\n",
-      " [ 0.18563583 -1.16668735  0.10895858]]\n"
+      "[[ 1.19470746 -2.38973938 -1.08843624]\n",
+      " [ 0.21120526  1.85031719  0.74256033]]\n"
      ]
     }
    ],
@@ -523,9 +575,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7.94322381e-01 2.20830155e-01 6.05760437e-01 2.82486109e-01]\n",
-      " [5.98822926e-01 8.39021769e-01 1.51624138e-01 7.05214011e-04]\n",
-      " [9.95648211e-01 8.88421102e-01 6.55993683e-01 8.50130815e-01]]\n"
+      "[[0.32187574 0.11406312 0.19996119 0.84016494]\n",
+      " [0.6200982  0.98142401 0.97353743 0.2025287 ]\n",
+      " [0.209122   0.84004439 0.82190265 0.56568503]]\n"
      ]
     }
    ],
@@ -545,8 +597,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[2, 1, 2, 1],\n",
-       "       [2, 1, 4, 4]])"
+       "array([[2, 5, 2, 2],\n",
+       "       [3, 4, 1, 4]])"
       ]
      },
      "execution_count": 18,
@@ -654,15 +706,15 @@
       "[3 4 5]\n",
       "[ 8 10 12]\n",
       "[6 7 8]\n",
-      "[[31 87 56 43]\n",
-      " [88 76 75 81]\n",
-      " [20 70  4 59]]\n",
-      "[[35 80 70 97]\n",
-      " [36 42 21 97]\n",
-      " [92 35 50  8]]\n",
-      "[[1085 6960 3920 4171]\n",
-      " [3168 3192 1575 7857]\n",
-      " [1840 2450  200  472]]\n"
+      "[[79 92 51 17]\n",
+      " [73 46 77 55]\n",
+      " [80 75 56 31]]\n",
+      "[[27 78  8 80]\n",
+      " [ 4 39 83 99]\n",
+      " [54 10 63 48]]\n",
+      "[[2133 7176  408 1360]\n",
+      " [ 292 1794 6391 5445]\n",
+      " [4320  750 3528 1488]]\n"
      ]
     }
    ],
@@ -1615,11 +1667,11 @@
       " [ 7  8  9]\n",
       " [10 11 12]\n",
       " [13 14 15]]\n",
-      "Shuffled array: [[ 1  2  3]\n",
-      " [ 4  5  6]\n",
-      " [10 11 12]\n",
+      "Shuffled array: [[10 11 12]\n",
+      " [ 7  8  9]\n",
+      " [ 1  2  3]\n",
       " [13 14 15]\n",
-      " [ 7  8  9]]\n"
+      " [ 4  5  6]]\n"
      ]
     }
    ],
@@ -2003,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "485ee7cb",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "6a94b6fc",
    "metadata": {},
    "outputs": [
@@ -2108,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "79a2db0d",
    "metadata": {},
    "outputs": [
@@ -2182,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 54,
    "id": "e46a6335",
    "metadata": {},
    "outputs": [
@@ -2221,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 55,
    "id": "975b4e3c",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "a4c516f3",
    "metadata": {},
    "outputs": [
@@ -2286,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 57,
    "id": "91021e9a",
    "metadata": {},
    "outputs": [
@@ -2322,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 58,
    "id": "a5d8e9d0",
    "metadata": {},
    "outputs": [
@@ -2355,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 59,
    "id": "f1e3bedc",
    "metadata": {},
    "outputs": [
