Final all topic included

--- a/main.ipynb
+++ b/main.ipynb
@@ -680,10 +680,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "191eaf67",
+   "metadata": {},
+   "source": [
+    "## Numpy Array inspections \n",
+    "- Understanding the properties of your array is crucial.\n",
+    "    - arr.shape -> Array shape\n",
+    "    - arr.ndim -> Number of dimensions\n",
+    "    - arr.dtype -> Data type\n",
+    "    - arr.size -> Total number of elements\n",
+    "    - arr.nbytes -> Memory usage (in bytes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "46c374a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array shape: (2, 3)\n",
+      "Number of dimensions: 2\n",
+      "Data type: int64\n",
+      "Total number of elements: 6\n",
+      "Memory usage (bytes): 48\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "print(\"Array shape:\", arr.shape)\n",
+    "print(\"Number of dimensions:\", arr.ndim)\n",
+    "print(\"Data type:\", arr.dtype)\n",
+    "print(\"Total number of elements:\", arr.size)\n",
+    "print(\"Memory usage (bytes):\", arr.nbytes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "32223ee7",
    "metadata": {},
    "source": [
-    "### Arithmetic Operation in Numpy Arrays\n",
+    "### Vectorized Arithmetic Operations in Numpy Arrays\n",
+    "NumPy allows to perform operations on arrays element-wise without explicit loops.\n",
+    "\n",
     "- a + b  -> np.add(a, b)\n",
     "- a - b  -> np.subtract(a, b)\n",
     "- a * b -> np.multiply(a, b)\n",
@@ -749,7 +793,8 @@
    "id": "49ae1d5c",
    "metadata": {},
    "source": [
-    "### Arithmetic funtions in Numpy\n",
+    "### Arithmetic Aggregation funtions in Numpy\n",
+    "Computing statistics efficienty.\n",
     "\n",
     "- np.min(a)\n",
     "- np.max(a)\n",
@@ -1523,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a192b617",
    "metadata": {},
    "outputs": [
@@ -1539,8 +1584,6 @@
    ],
    "source": [
     "## Searching in Numpy arrays\n",
-    "import select\n",
-    "\n",
     "\n",
     "arr = np.array([[10, 20, 30, 40, 50], [60, 70, 80, 90, 100]])\n",
     "\n",
@@ -2041,6 +2084,7 @@
     "### Matrix functions in Numpy\n",
     "- np.transpose() -> Transposes the matrix.\n",
     "- A.T -> Transpose of matrix A\n",
+    "- NumPy contains the `linalg` module for efficient linear algebra operations.\n",
     "- np.linalg.inv() -> Computes the inverse of a matrix.\n",
     "- np.linalg.det() -> Computes the determinant of a matrix.\n",
     "- np.linalg.eig() -> Computes the eigenvalues and right eigenvectors of a square matrix.\n",
@@ -2368,13 +2412,13 @@
    "metadata": {},
    "source": [
     "## Saving and Loading Numpy arrays\n",
-    "- You can save numpy arrays to disk using functions like `np.save()` and `np.savez()`.\n",
+    "- You can save numpy arrays to disk using functions like `np.save()`, `savez_compressed()` and `np.savez()`.\n",
     "- You can load numpy arrays from disk using functions like `np.load()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "id": "a5d8e9d0",
    "metadata": {},
    "outputs": [
@@ -2387,7 +2431,13 @@
       " [6 3]]\n",
       "Loaded Array from .npz file:\n",
       " [[4 3]\n",
-      " [6 3]]\n"
+      " [6 3]]\n",
+      "Saved 'arrays.npz'\n",
+      "\n",
+      "Loaded 'a' from zip: [[4 3]\n",
+      " [6 3]]\n",
+      "Loaded 'b' from zip: [[ 8  6]\n",
+      " [12  6]]\n"
      ]
     }
    ],
@@ -2400,9 +2450,59 @@
     "loaded_A = np.load('array_data.npy')  # Load the array from the file\n",
     "print(\"Loaded Array from file:\\n\", loaded_A)\n",
     "\n",
+    "\n",
     "np.savez('array_data.npz', A)\n",
     "loaded_data = np.load('array_data.npz')\n",
-    "print(\"Loaded Array from .npz file:\\n\", loaded_data['arr_0'])"
+    "print(\"Loaded Array from .npz file:\\n\", loaded_data['arr_0'])\n",
+    "\n",
+    "# Save multiple arrays (compressed)\n",
+    "np.savez_compressed('arrays.npz', a=A, b=A*2)\n",
+    "print(\"Saved 'arrays.npz'\")\n",
+    "\n",
+    "# Load multiple\n",
+    "with np.load('arrays.npz') as data:\n",
+    "    print(\"\\nLoaded 'a' from zip:\", data['a'])\n",
+    "    print(\"Loaded 'b' from zip:\", data['b'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2785c3e7",
+   "metadata": {},
+   "source": [
+    "## Memory Mapping (`memmap`)\n",
+    "Allows you to access small segments of huge files on disk as if they were in memory, without loading the entire file apart from the accessing part."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7c33018c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value at [0,0] from disk: 0.06608922\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a large file (mocking a large dataset on disk)\n",
+    "filename = 'large_array.dat'\n",
+    "fp = np.memmap(filename, dtype='float32', mode='w+', shape=(1000, 1000))\n",
+    "\n",
+    "# Write data to it like a normal array\n",
+    "fp[:] = np.random.rand(1000, 1000)\n",
+    "fp.flush() # Write changes to disk\n",
+    "\n",
+    "# Delete the object to close the file\n",
+    "del fp\n",
+    "\n",
+    "# Load it back as a read-only memory map\n",
+    "new_fp = np.memmap(filename, dtype='float32', mode='r', shape=(1000, 1000))\n",
+    "print(\"Value at [0,0] from disk:\", new_fp[0, 0])"
    ]
   },
   {
@@ -2426,6 +2526,87 @@
     "a2 = a[np.newaxis, 2]\n",
     "print(a2)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10464b9c",
+   "metadata": {},
+   "source": [
+    "## Structured Arrays (Advanced)\n",
+    "Structured arrays provide a way to store data with compound data types (similar to C structs or SQL tables)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2ef096d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Structured Array:\n",
+      " [('Rex', 9, 81.) ('Fido', 3, 27.)]\n",
+      "\n",
+      "Names: ['Rex' 'Fido']\n",
+      "Ages: [9 3]\n",
+      "\n",
+      "Dogs older than 5: ['Rex']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define data type for each field: name (string), age (int), weight (float)\n",
+    "data_type = [('name', 'U10'), ('age', 'i4'), ('weight', 'f4')]\n",
+    "\n",
+    "data = np.array([('Rex', 9, 81.0), ('Fido', 3, 27.0)], dtype=data_type)\n",
+    "\n",
+    "print(\"Structured Array:\\n\", data)\n",
+    "\n",
+    "# Access by field name\n",
+    "print(\"\\nNames:\", data['name'])\n",
+    "print(\"Ages:\", data['age'])\n",
+    "\n",
+    "# Filter by field\n",
+    "print(\"\\nDogs older than 5:\", data[data['age'] > 5]['name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c40b94",
+   "metadata": {},
+   "source": [
+    "### Masked Arrays\n",
+    "Handing messy real-world data where some values might be invalid or missing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ae5e5adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Masked Array: [1 2 3 -- 5]\n",
+      "Mean (ignoring -999): 2.75\n",
+      "Standard Mean (wrong): -197.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1, 2, 3, -999, 5])\n",
+    "\n",
+    "# Create a masked array where -999 is considered invalid\n",
+    "mx = np.ma.masked_values(x, -999)\n",
+    "\n",
+    "print(\"Masked Array:\", mx)\n",
+    "print(\"Mean (ignoring -999):\", mx.mean())\n",
+    "print(\"Standard Mean (wrong):\", x.mean())"
    ]
   }
  ],
