--- a/main.ipynb
+++ b/main.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "## What is numpy?\n",
     "\n",
-    "Numpy is a powerful library in Python that provides support for large, multi-dimensional arrays and matrices, along with a collection of mathematical functions to operate on these arrays. Numpy arrays are more efficient than Python lists for numerical computations, and it is designed to work with large datasets efficiently.\n",
-    "\n",
-    "In summary, NumPy is a fundamental library in Python that provides support for large, multi-dimensional arrays and matrices, along with a collection of mathematical functions for numerical computations. It is widely used in data analysis, scientific computing, and machine learning applications.\n",
+    "NumPy is a fundamental library in Python that provides support for large, multi-dimensional arrays and matrices, along with a collection of mathematical functions for numerical computations. It is widely used in data analysis, scientific computing, and machine learning applications.\n",
     "\n",
     "## Why is numpy important?\n",
     "\n",
@@ -20,8 +18,6 @@
     "2. Flexibility: NumPy arrays can have a variable number of dimensions, allowing for more complex data structures and operations. They also support different data types, such as integers, floating-point numbers, and complex numbers, which can be useful in various applications.\n",
     "\n",
     "3. Convenient mathematical functions: NumPy provides a collection of mathematical functions, such as `sin`, `cos`, `exp`, `log`, and `sqrt`, that can be applied to arrays efficiently. These functions are implemented in C, which can lead to significant performance improvements compared to Python's built-in functions.\n",
-    "\n",
-    "In summary, NumPy is a powerful library in Python that provides support for large, multi-dimensional arrays and matrices, along with a collection of mathematical functions for numerical computations. It is widely used in data analysis, scientific computing, and machine learning applications, and it offers several advantages over traditional Python lists.\n",
     "\n",
     "## How can I get started with numpy?\n",
     "\n",
